package br.com.raizesdonordeste.domain;

public enum CanalPedido { APLICATIVO, TOTEM, BALCAO, PICKUP }
