package br.com.raizesdonordeste.domain;

public enum StatusPagamento { SOLICITADO, CONFIRMADO, RECUSADO, FALHA }
