package br.com.raizesdonordeste.domain;

public enum StatusPedido { CRIADO, AGUARDANDO_PAGAMENTO, PAGO, EM_PREPARO, PRONTO, ENTREGUE, CANCELADO, PAGAMENTO_RECUSADO }
