package br.com.raizesdonordeste.domain;

public enum TipoCozinha { COMPLETA, REDUZIDA }
