package br.com.raizesdonordeste.domain;

public enum TipoOperacaoSensivel { CANCELAMENTO, DESCONTO, AJUSTE_ESTOQUE, ACESSO_DADOS_PESSOAIS, ANONIMIZACAO }
